4/21/06 - Added additional prompt code.
Upgrade to version .84
10/07/06 - Updated login code
10/07/06 - Turned off every-line debugging.
Upgrade to version .84.5
10/07/06 - Revised "aset" functionality
10/08/06 - Began adding comments.
10/08/06 - Moved default room creation from Being to Room.
10/08/06 - Added getRestOfCommand Util.
Upgrade to version .85
10/11/06 - Added "bug" command.
10/11/06 - Changed LinkedLists to synchronized Vectors to stop concurrentmodification errors.
Upgrade to version .86
10/12/06 - Changed "consider" command to be more helpful.
10/12/06 - Fixed mobile reset wear to be silent.
10/12/06 - Fixed login/logout bugs and error handling
10/12/06 - Fixed eat/drink.
10/12/06 - Added extra code to ease process of interacting with a particular type of item.
10/12/06 - Made entire player name necessary to attack another player.
10/12/06 - Made fountain a type of DrinkCon (useful for giants)
10/12/06 - Added fastpaths. (arrow keys)
Upgrdade to version .87
10/13/06 - Fixed drinking
10/13/06 - Changed consider so "consider PeEll" doesn't consider self.
10/13/06 - Added "wear all"
10/13/06 - Fixed sacrafice so you can't sacrafice large objects.
10/13/06 - Added object specification for getItem in room.
10/13/06 - Decreased urge to wander.
10/13/06 - *Wrote gridding code.
Upgrade to version .88
10/14/06 - Implemented move points
10/14/06 - Fixed player attacking.
10/14/06 - Fixed coloring of food/drink.
Upgrade to version .89
11/28/06 - *Added container object.
11/28/06 - *Updated how instances of items are handled and stored.
11/28/06 - *Updated "get" command to be more intelligent.
11/28/06 - Fixed get 900000 gold bug.
11/28/06 - *Added corpse and disposable items.
Upgrade to version .90
11/29/06 - Fixed blocking duplicate login problem.
11/29/06 - Fixed mobile-finding not taking actor into account.
11/29/06 - Stopped people from upping players past 50.
11/29/06 - Added ability to sac corpses.
Upgrade to version .91